tests/negative/neg_pr1162_removed_declare_expression.safe
package Neg_PR1162_Removed_Declare_Expression

   function Build returns Integer

      return declare
         Temp : Integer = 1;
      begin
         Temp;
